# blockchain

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  markdown-link-check-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  heritage_submission.md
.github/workflows/: docs.yml  release.yml  rust.yml
crates/consensus/: Cargo.toml
crates/consensus/src/: checkpoints.rs  lib.rs  pow.rs
crates/core/: Cargo.toml
crates/core/src/: block.rs  constants.rs  crypto.rs  lib.rs  multisig.rs  transaction.rs
crates/explorer-backend/: Cargo.toml
crates/explorer-backend/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
crates/explorer-backend/frontend/docs/: CORE_PAGES.md  FOUNDATION.md  MODULE_5C_SUMMARY.md  MODULE_5D_SUMMARY.md  MODULE_5E_SUMMARY.md  PROJECT_TRACKER.md  REALTIME.md  SUMMARY.md  VISUAL_DESIGN_GUIDE.md  VISUAL_GUIDE.md
crates/explorer-backend/frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
crates/explorer-backend/frontend/src/components/: BlockList.css  BlockList.tsx  CulturalThemeToggle.css  CulturalThemeToggle.tsx  Layout.css  Layout.tsx  PWABadge.css  PWABadge.tsx  SearchBar.css  SearchBar.tsx  StatCard.css  StatCard.tsx  index.ts
crates/explorer-backend/frontend/src/hooks/: use-api.ts  use-websocket.ts
crates/explorer-backend/frontend/src/lib/: api-client.ts  i18n.ts
crates/explorer-backend/frontend/src/locales/: ar.json  en.json
crates/explorer-backend/frontend/src/pages/: AddressPage.css  AddressPage.tsx  AnalyticsPage.css  AnalyticsPage.tsx  BlockDetailPage.css  BlockDetailPage.tsx  BlocksPage.css  BlocksPage.tsx  GovernancePage.css  GovernancePage.tsx  HomePage.css  HomePage.tsx  IdentityPage.css  IdentityPage.tsx  MempoolPage.css  MempoolPage.tsx  NetworkPage.css  NetworkPage.tsx  SearchResultPage.css  SearchResultPage.tsx  TransactionPage.css  TransactionPage.tsx  index.ts
crates/explorer-backend/frontend/src/store/: language-store.ts
crates/explorer-backend/frontend/src/styles/: animations.css  cultural.css  rtl.css  typography.css
crates/explorer-backend/frontend/src/types/: api.ts
crates/explorer-backend/frontend/src/utils/: locale.ts
crates/explorer-backend/src/: api.rs  handlers.rs  lib.rs  rate_limit.rs  server.rs  tests.rs  types.rs  websocket.rs
crates/explorer-backend/static/: index.html
crates/governance/: Cargo.toml
crates/governance/src/: lib.rs  manager.rs  state.rs  storage.rs  treasury.rs  types.rs  validation.rs
crates/identity/: Cargo.toml
crates/identity/src/: ipfs.rs  lib.rs  metadata.rs  registry.rs  storage.rs  token.rs
crates/mempool/: Cargo.toml
crates/mempool/src/: error.rs  lib.rs  orphan.rs  pool.rs  validator.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs  server.rs
crates/mining-pool/: Cargo.toml
crates/mining-pool/src/: error.rs  lib.rs  pool.rs  types.rs
crates/network/: Cargo.toml
crates/network/src/: behaviour.rs  bootstrap.rs  lib.rs  node.rs  peer_cache.rs  protocol.rs  rate_limiter.rs  reputation.rs
crates/node-cli/: Cargo.toml
crates/node-cli/src/: config.rs  lib.rs  main.rs  node.rs
crates/storage/: Cargo.toml
crates/storage/src/: blockchain.rs  blockchain.rs.bak  indexer.rs  lib.rs  pruning.rs  state.rs
crates/wallet/: Cargo.toml
crates/wallet-api/: Cargo.toml
crates/wallet-api/src/: api.rs  auth.rs  lib.rs  main.rs  models.rs  rate_limit.rs  server.rs
crates/wallet/src/: encrypted.rs  lib.rs  main.rs  mnemonic.rs  storage.rs
docs/: ARCHITECTURE.md  BRAND_GUIDE.md  CAPACITY_PLANNING.md  CONSENSUS_SPEC.md  DEPLOYMENT.md  DISASTER_RECOVERY.md  FAQ.md  GETTING_STARTED.md  MAINNET_LAUNCH_CHECKLIST.md  README.md  TOKENOMICS.md
docs/api/: WALLET_API.md
docs/audits/: AUDIT_FIXES.md  AUDIT_FIXES_B_SERIES.md  AUDIT_LOG.md  AUDIT_REMEDIATION.md  AUDIT_SUMMARY.md  COMPREHENSIVE_AUDIT_SUMMARY.md  MODULE_A3_MINING_POOL.md  MODULE_B1_NETWORKING.md  MODULE_B2_STORAGE.md  MODULE_B3_NODE_SYNC.md  MODULE_C1_WALLET_SECURITY.md  MODULE_C2_WALLET_API.md  MODULE_D1_EXPLORER_BACKEND.md  MODULE_D2_EXPLORER_FRONTEND.md  MODULE_E1_GOVERNANCE.md  MODULE_E2_IDENTITY.md  MODULE_E3_BILINGUAL.md  MODULE_F2_PERFORMANCE.md  MODULE_F3_BRANDING.md  README.md  SECURITY_AUDIT_COMPLETE.md  SECURITY_FINDINGS.md  SECURITY_PATCH_CHANGELOG.md  SECURITY_PATCH_REPORT.md
docs/formal-verification/: OpenSyriaConsensus.tla  README.md
docs/governance/: GOVERNANCE.md
docs/identity/: CULTURAL_IDENTITY.md  CULTURAL_IDENTITY_SUMMARY.md  IPFS_ARCHITECTURE.md  IPFS_INTEGRATION.md  SHOWCASE.md
docs/monitoring/: PROMETHEUS.md  opensyria-dashboard.json
docs/network/: NETWORK_CLI.md  NETWORK_IMPLEMENTATION.md  P2P_NETWORKING.md
docs/operations/: INCIDENT_RESPONSE_PLAYBOOK.md
docs/production-readiness/: FINAL_PRODUCTION_READINESS_ASSESSMENT.md  MAINNET_READY_CERTIFICATION.md  PHASE_0_REMEDIATION_REPORT.md  PHASE_1_REMEDIATION_REPORT.md  PHASE_2_REMEDIATION_REPORT.md  PHASE_3_REMEDIATION_REPORT.md  PHASE_3_SUMMARY.md  PRODUCTION_READINESS_UPDATE.md
docs/security/: BUG_BOUNTY_PROGRAM.md  EXTERNAL_AUDIT_PACKAGE.md  PENETRATION_TESTING_SCENARIOS.md
docs/tests/: CLAUDE_TEST_ANALYSIS_PROTOCOL.md  COVERAGE_ENHANCEMENT_PLAN.md  INTEGRATION_TESTS.md  INTEGRATION_TESTS_SUMMARY.md
docs/wallet/: HARDWARE_WALLET_INTEGRATION.md
scripts/: README.md  dev-explorer-frontend.sh  ipfs-summary.sh  opensyria-node.logrotate  push-retry.sh  run-explorer.sh  setup-systemd.sh  simulate-51-attack.py  test-daemon.sh  test-disaster-recovery.sh  test-ipfs.sh  test-multisig.sh  test-network.sh  test-pool.sh  test-wallet-api.sh
tests/: Cargo.toml  fuzz_tests.rs  integration_tests.rs  load_tests.rs
