[workspace]
resolver = "2"

members = [
    "crates/core",
    "crates/consensus",
    "crates/network",
    "crates/storage",
    "crates/wallet",
    "crates/node-cli",
    "crates/explorer-backend",
    "crates/governance",
    "crates/identity",
    "crates/mempool",
    "crates/wallet-api",
    "crates/mining-pool",
    "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OpenSyria Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/opensyria/blockchain"

[workspace.dependencies]
# Cryptography
sha2 = "0.10"
ed25519-dalek = "2.1"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0.0-rc.3", features = ["derive"] }
hex = "0.4"

# Networking
tokio = { version = "1.35", features = ["full"] }
libp2p = "0.53"

# Storage
rocksdb = { version = "0.22", features = ["multi-threaded-cf"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
