[package]
name = "opensyria-consensus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "miner"
path = "src/bin/miner.rs"

[dependencies]
opensyria-core = { path = "../core" }
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
clap.workspace = true
colored.workspace = true
hex = "0.4"
