[package]
name = "opensyria-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
zeroize.workspace = true
hex = "0.4"
