[package]
name = "opensyria-explorer-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
opensyria-core = { path = "../core" }
opensyria-storage = { path = "../storage" }
opensyria-consensus = { path = "../consensus" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing.workspace = true
tracing-subscriber.workspace = true
hex.workspace = true

[[bin]]
name = "explorer"
path = "src/bin/explorer.rs"
