[package]
name = "opensyria-explorer-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
opensyria-core = { path = "../core" }
opensyria-storage = { path = "../storage" }
opensyria-consensus = { path = "../consensus" }
opensyria-mempool = { path = "../mempool" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing.workspace = true
tracing-subscriber.workspace = true
hex.workspace = true
futures = "0.3"

[[bin]]
name = "explorer"
path = "src/bin/explorer.rs"
