[package]
name = "opensyria-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
opensyria-core = { path = "../core" }
opensyria-storage = { path = "../storage" }
opensyria-mempool = { path = "../mempool" }
libp2p = { version = "0.53", features = [
    "tcp",
    "noise",
    "yamux",
    "gossipsub",
    "mdns",
    "kad",
    "request-response",
    "cbor",
    "identify",
    "ping",
    "macros",
    "tokio"
] }
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
bincode.workspace = true
tracing.workspace = true
anyhow = "1.0"
futures = "0.3"
async-trait = "0.1"
