[package]
name = "opensyria-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
opensyria-core = { path = "../core" }
opensyria-consensus = { path = "../consensus" }
rocksdb.workspace = true
serde.workspace = true
bincode.workspace = true
tracing = "0.1"
hex = "0.4"

[dev-dependencies]
tempfile = "3.14"
