[package]
name = "opensyria-wallet-api"
version = "0.1.0"
edition = "2021"

[dependencies]
opensyria-core = { path = "../core" }
opensyria-storage = { path = "../storage" }
opensyria-node-cli = { path = "../node-cli" }

axum = "0.8"
tokio = { version = "1.42", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
