[package]
name = "opensyria-wallet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "wallet"
path = "src/main.rs"

[dependencies]
opensyria-core = { path = "../core" }
clap.workspace = true
colored.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow = "1.0"
dirs = "5.0"
hex = "0.4"
chrono = "0.4"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
rpassword = "7.3"
bip39 = "2.0"
sha2 = "0.10"
qr2term = "0.3"
bip32 = "0.5"

[dev-dependencies]
tempfile = "3.14"

